# game-theory-labs

./: .editorconfig  .gitignore  Cargo.toml  flake.nix
crates/brown_robinson_method/: Cargo.toml
crates/brown_robinson_method/src/: iter.rs  lib.rs
crates/continuous_convex_concave_method/: Cargo.toml
crates/continuous_convex_concave_method/src/: formula.rs  iter.rs  lib.rs
crates/game_theory/: Cargo.toml
crates/game_theory/src/: ext.rs  generate.rs  highlight.rs  lib.rs
crates/game_theory/src/cooperative/: coalition.rs  mod.rs
crates/game_theory/src/non_cooperative/: mod.rs  optimal.rs  pair.rs
crates/game_theory/src/positional/: backward_induction.rs  mod.rs  tree.rs
crates/game_theory/src/zero_sum/: mod.rs  parse.rs
lab-01-brown_robinson/: Cargo.toml
lab-01-brown_robinson/src/: main.rs
labs/lab-01-brown_robinson/: Cargo.toml
labs/lab-01-brown_robinson/src/: main.rs
labs/lab-02-continuous_convex_concave/: Cargo.toml
labs/lab-02-continuous_convex_concave/src/: main.rs
labs/lab-03-non_cooperative/: Cargo.toml
labs/lab-03-non_cooperative/src/: main.rs
labs/lab-04-backward_induction/: Cargo.toml
labs/lab-04-backward_induction/src/: main.rs
labs/lab-04_backward_induction/: Cargo.toml
labs/lab-04_backward_induction/src/: main.rs
labs/lab-05-cooperative_sheply_method/: Cargo.toml
labs/lab-05-cooperative_sheply_method/src/: main.rs
labs/lab-06-informational_warfare/: Cargo.toml
labs/lab-06-informational_warfare/src/: main.rs
labs/rk-02-closed-auctions/: Cargo.toml
labs/rk-02-closed-auctions/src/: main.rs
labs/rk-03-informational_warfare/: Cargo.toml
labs/rk-03-informational_warfare/src/: main.rs
