[workspace]
resolver = "2"
members = [
    "crates/*",
    "labs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# own modules
game_theory = { path = "crates/game_theory", version = "0.1.0" }
brown_robinson_method = { path = "crates/brown_robinson_method", version = "0.1.0" }
# dependencies
num-traits = "0.2.18"
nalgebra = "0.32.4"
ordered-float = "4.2"
rational = "1.5"
prettytable = "0.10"
rand = "0.8.5"
clap = "4.5.3"
thiserror = "1.0.58"
peg = "0.8.2"
