[package]
name = "lab-01-brown_robinson"
version = "0.1.0"
edition = "2021"

[dependencies]
game_theory.workspace = true
brown_robinson_method.workspace = true
nalgebra.workspace = true
ordered-float.workspace = true
rational.workspace = true
prettytable.workspace = true
rand.workspace = true
clap = { workspace = true, features = ["derive"] }

[features]
example = []
