[package]
name = "lab-03-non_cooperative"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_theory.workspace = true
nalgebra.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_chacha.workspace = true
