[package]
name = "lab-04_backward_induction"
version.workspace = true
edition.workspace = true

[dependencies]
game_theory.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_chacha.workspace = true
