[package]
name = "lab-06-informational_warfare"
version.workspace = true
edition.workspace = true

[dependencies]
game_theory.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_chacha.workspace = true
nalgebra.workspace = true
